[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.2",
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.115.12",
    "playwright>=1.52.0",
    "structlog>=25.4.0",
    "uvicorn>=0.34.3",
]
